# ec2autostop

./: Cargo.toml  LICENSE  README.md  flake.nix  rustfmt.toml
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 64fg719is3g86acj24amc4swjkbpkwlg-source  9qg138mfi0yri9ibq3svh01i454fpic4-source  a2ysm11ppy5wrmdrzn4jh4a11mn6527b-source  bjpf0izar2l5gfzvfw8wwab9qfzm4ri7-source  y485rgvh33dqs0mr2gw8xzppslfbbg1z-source  z2g7mnqwcigwzcz7h67xb67p7wyj6rkw-source
nix/: rust.nix
src/: main.rs
